--- a/BubbleBuster/BubbleBuster/BubbleBuster.csproj
+++ b/BubbleBuster/BubbleBuster/BubbleBuster.csproj
@@ -42,8 +42,10 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="JSON\FollowersID.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Request\Request.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config" />
