--- a/BubbleBuster/BubbleBuster/BubbleBuster.csproj
+++ b/BubbleBuster/BubbleBuster/BubbleBuster.csproj
@@ -47,9 +47,10 @@
   <ItemGroup>
     <Compile Include="Helper\FileHelper.cs" />
     <Compile Include="Helper\RequestBuilder.cs" />
-    <Compile Include="Web\ReturnedObjects\FollowersID.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Web\ReturnedObjects\Friends.cs" />
+    <Compile Include="Web\ReturnedObjects\User.cs" />
     <Compile Include="Web\WebHandler.cs" />
   </ItemGroup>
   <ItemGroup>
