--- a/BubbleBuster/BubbleBuster/BubbleBuster.csproj
+++ b/BubbleBuster/BubbleBuster/BubbleBuster.csproj
@@ -8,9 +8,10 @@
     <OutputType>Exe</OutputType>
     <RootNamespace>BubbleBuster</RootNamespace>
     <AssemblyName>BubbleBuster</AssemblyName>
-    <TargetFrameworkVersion>v4.5.2</TargetFrameworkVersion>
+    <TargetFrameworkVersion>v4.6.1</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
     <AutoGenerateBindingRedirects>true</AutoGenerateBindingRedirects>
+    <TargetFrameworkProfile />
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Debug|AnyCPU' ">
     <PlatformTarget>AnyCPU</PlatformTarget>
@@ -46,10 +47,16 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Helper\FileHelper.cs" />
+    <Compile Include="Helper\LimitHelper.cs" />
     <Compile Include="Helper\RequestBuilder.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Web\ReturnedObjects\Friends.cs" />
+    <Compile Include="Web\ReturnedObjects\RateLimit\Limit.cs" />
+    <Compile Include="Web\ReturnedObjects\RateLimit\Rate.cs" />
+    <Compile Include="Web\ReturnedObjects\RateLimit\ResourceFriends.cs" />
+    <Compile Include="Web\ReturnedObjects\RateLimit\Resources.cs" />
+    <Compile Include="Web\ReturnedObjects\RateLimit\ResourceStatuses.cs" />
     <Compile Include="Web\ReturnedObjects\Tweet.cs" />
     <Compile Include="Web\ReturnedObjects\User.cs" />
     <Compile Include="Web\WebHandler.cs" />
