--- a/BubbleBuster/QueueServer/QueueServer.csproj
+++ b/BubbleBuster/QueueServer/QueueServer.csproj
@@ -5,4 +5,8 @@
     <TargetFramework>netcoreapp2.0</TargetFramework>
   </PropertyGroup>
 
+  <ItemGroup>
+    <PackageReference Include="Microsoft.Tpl.Dataflow" Version="4.5.24" />
+  </ItemGroup>
+
 </Project>
