--- a/BubbleBuster/BubbleBuster/BubbleBuster.csproj
+++ b/BubbleBuster/BubbleBuster/BubbleBuster.csproj
@@ -67,7 +67,7 @@
     <Compile Include="Helper\RequestBuilder.cs" />
     <Compile Include="Helper\TweetRetriever.cs" />
     <Compile Include="Helper\UrlHelper.cs" />
-    <Compile Include="Helper\WordChecker.cs" />
+    <Compile Include="Helper\TweetAnalyzer.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Web\ReturnedObjects\Entities.cs" />
