--- a/BubbleBuster/RestQueueServer/packages.config
+++ b/BubbleBuster/RestQueueServer/packages.config
@@ -33,6 +33,7 @@
   <package id="Microsoft.AspNetCore.Http.Extensions" version="2.0.0" targetFramework="net461" />
   <package id="Microsoft.AspNetCore.Http.Features" version="2.0.0" targetFramework="net461" />
   <package id="Microsoft.AspNetCore.HttpOverrides" version="2.0.0" targetFramework="net461" />
+  <package id="Microsoft.AspNetCore.Mvc.Abstractions" version="2.0.0" targetFramework="net461" />
   <package id="Microsoft.AspNetCore.Routing" version="2.0.0" targetFramework="net461" />
   <package id="Microsoft.AspNetCore.Routing.Abstractions" version="2.0.0" targetFramework="net461" />
   <package id="Microsoft.AspNetCore.Server.IISIntegration" version="2.0.0" targetFramework="net461" />
