Start queueserver and REST at same time through the REST
Doesnt work on my pc so it has to work on DonPc right??

--- a/BubbleBuster/QSLib/QSLib.csproj
+++ b/BubbleBuster/QSLib/QSLib.csproj
@@ -8,4 +8,8 @@
     <PackageReference Include="Microsoft.Tpl.Dataflow" Version="4.5.24" />
   </ItemGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="..\BubbleBuster\BubbleBuster.csproj" />
+  </ItemGroup>
+
 </Project>
