--- a/BubbleBuster/QueueServer/QueueServer.csproj
+++ b/BubbleBuster/QueueServer/QueueServer.csproj
@@ -5,4 +5,13 @@
     <TargetFramework>netcoreapp2.0</TargetFramework>
   </PropertyGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="..\QSLib\QSLib.csproj" />
+    <ProjectReference Include="..\RestQueueServer\RestQueueServer.csproj" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <Folder Include="Classes\" />
+  </ItemGroup>
+
 </Project>
