- The OAuthHelper now works  - On Jonas pc the whole process completes in 4:12

--- a/BubbleBuster/BubbleBuster/BubbleBuster.csproj
+++ b/BubbleBuster/BubbleBuster/BubbleBuster.csproj
@@ -83,6 +83,7 @@
     <Compile Include="Web\ReturnedObjects\Tweet.cs" />
     <Compile Include="Web\ReturnedObjects\Url.cs" />
     <Compile Include="Web\ReturnedObjects\User.cs" />
+    <Compile Include="Web\UrlObject.cs" />
     <Compile Include="Web\WebHandler.cs" />
     <Compile Include="WordUpdater\PolUserObj.cs" />
     <Compile Include="WordUpdater\UncommonWordObj.cs" />
